# prefault

./: Cargo.toml  README.md
src/: filelist.rs  main.rs  memory.rs  process.rs  snapshot.rs  util.rs
support/config/: prefault.conf
support/man/: prefault.1
support/pkg/: prefault.spec
support/systemd/: prefault.service
