[package]
name = "prefault"
version = "0.0.2"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
config = "0.9.3"
failure = "0.1.5"
failure_derive = "0.1.5"
lazy_static = "1.3.0"
ctrlc = "3.1.3"
libc = "0.2.60"
nix = "0.14.1"
inotify = "0.7.0"
walkdir = "2.2.9"
pretty-bytes = "0.2.2"
rayon = "1.1.0"
