[package]
name = "prefault"
version = "0.0.3"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
config = "0.9.3"
failure = "0.1.6"
failure_derive = "0.1.6"
lazy_static = "1.4.0"
ctrlc = "3.1.3"
libc = "0.2.65"
nix = "0.15.0"
inotify = "0.7.0"
walkdir = "2.2.9"
pretty-bytes = "0.2.2"
rayon = "1.2.1"
